# BackendApp

./: README.md  backendnotas.db  main.py  pyproject.toml  run.py  run.spec
api/: deps.py
api/routers/: auth.py  boletas.py  calificaciones.py  configuracion.py  dashboard.py  notas.py  tareas.py
core/: config.py  database.py
domain/: schemas.py  services.py
domain/schemas/: alumno.py  boleta.py  calificacion.py  configuracion.py  materia.py  tarea.py  user.py
domain/services/: alumno.py  boleta.py  calificacion.py  configuracion.py  materia.py  pdf.py  tarea.py
domain/templates/: boleta_pdf.html
persistencia/: models.py  repository.py
persistencia/repositories/: alumno.py  boleta.py  calificacion.py  configuracion.py  materia.py  tarea.py
scripts/: add_notas_to_boletas.py  create_lapsos_boletas.py  create_test_data.py  test_refactored_flow.py
